bynkc/tests/fixtures/positive/122_http_get_simple/src/greet.karn
context greet

service api from http {
  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
