bynkc/tests/fixtures/negative/230_refinement_cycle/src/demo.karn
context demo

actor A = B where hasClaim("x")
actor B = A where hasClaim("y")

service api from http {
  on GET("/x") by a: A () -> Effect[HttpResult[String]] {
    Ok("x")
  }
}
